[package]
name = "pools-and-pipeline"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.77"
async-channel = "2.1.1"
indicatif = { version = "0.17.7", features = ["tokio"] }
log = "0.4.20"
thiserror = "1.0.52"
tokio = { version = "1.35.1", features = ["full"] }
